<resources>
    <string name="app_name">MyTravelMate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="field_error">Field can\'t be empty !</string>
    <string name="about_us">Hello, my name is Luisa, I am a young developer willing to start a career in the IT domain. This is my first app in Android and I hope you find it useful. The main purpose of the app is to help travelers to find affordable vacations that they will enjoy</string>
    <string name="gallery">Gallery</string>
    <string name="menu_about_us">About us</string>
    <string name="share_button">Share</string>
    <string name="share_text">If you like this app you can share it with your friends</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_about_un">About us</string>
    <string name="contact_text">Thank you for trying our app, if you have questions or suggestions or you need help, don\'t hesitate to contact us here:</string>
    <string name="email_text">email : sofialuisa25@gmail.com</string>
    <string name="location_text">Location</string>
    <string name="vacation_name_text">Vacation Name</string>
    <string name="price_text">Price</string>
    <string name="from_text">From</string>
    <string name="select_date_text">Select Date</string>
    <string name="city_break_text">City Break</string>
    <string name="sea_side_text">Sea Side</string>
    <string name="mountain_text">Mountain</string>
    <string name="cancel_button">cancel</string>
    <string name="save_button">save</string>
    <string name="forecast_text">The forecast in the city you want to visit is shown below</string>
    <string name="vacation_name">Vacation Name :</string>
    <string name="location">Location :</string>
    <string name="price">Price :</string>
    <string name="kelvin_temp">Temperature in Kelvin degrees :</string>
    <string name="pressure_in_bars">Pressure in Bars :</string>
    <string name="weather_description">Weather description :</string>
    <string name="user_name">Luisa Sofia</string>
    <string name="email_user">sofialuisa25@gmail.com</string>

</resources>