<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/cloud">

    <LinearLayout
        android:paddingTop="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/large_font_size"
            android:text="@string/forecast_text"/>
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:paddingTop="@dimen/extra_large_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/vacation_name"
            android:textStyle="italic"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/readOnly1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:singleLine="true"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/small_padding"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/location"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/readOnly2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:singleLine="true"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/price"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/readOnly3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:singleLine="true"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
</LinearLayout>
    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/kelvin_temp"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="@dimen/small_font_size"/>

        <TextView
            android:id="@+id/readOnly4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:singleLine="true"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/pressure_in_bars"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/readOnly5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:paddingLeft="@dimen/small_space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".3"
            android:text="@string/weather_description"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textStyle="italic"
            android:textSize="@dimen/small_font_size" />

        <TextView
            android:id="@+id/readOnly6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:textSize="@dimen/small_font_size"
            android:textStyle="bold"
            android:singleLine="true"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>